@@ -1,3 +1,9 @@
+2010-05-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/scplugin.c:
+   Use the new PLUGIN_SET_TRANSLATABLE_INFO() macro.
+
+
 2010-05-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/speller.c:
